# universal-prompt-optimizer

./: .gitignore  Dockerfile  README.md  app.py  complete_codebase_export.txt  gunicorn.conf.py  prompt_engine.py  pyproject.toml  replit.md  requirements.txt  usage.db
attached_assets/: Pasted--keep-your-imports-and-helper-functions-as-is-above-this-line-from-flask-import-Response-1754604094618_1754604094619.txt  Pasted--replace-your-existing-INDEX-HTML-string-with-this-INDEX-HTML-doctype-html-htm-1754604300523_1754604300524.txt  Pasted--replace-your-existing-INDEX-HTML-string-with-this-INDEX-HTML-doctype-html-htm-1754604631028_1754604631029.txt  Pasted-1-Create-replace-these-files-replit-ini-Copy-Edit-run-pip-install-r-requirements-txt-gunico-1754655933954_1754655933954.txt  Pasted-3-In-app-py-add-the-scheduler-bootstrap-safe-idempotent-Drop-this-once-near-your-app-setup-af-1754655440111_1754655440112.txt  Pasted-Add-BLOCK-1-DB-table-share-endpoints-Replace-INDEX-HTML-with-BLOCK-2-adds-Share-Link-button-1754610133075_1754610133076.txt  Pasted-Add-BLOCK-1-backend-auth-quota-after-imports-and-before-routes-Wrap-the-three-generate-routes--1754608493979_1754608493979.txt  Pasted-Add-BLOCK-1-email-utils-Replace-your-existing-stripe-webhook-in-BLOCK-2-it-now-emails-the-key--1754609460015_1754609460015.txt  Pasted-Add-BLOCK-A-DB-schema-for-keys-helpers-Replace-the-existing-auth-quota-section-we-added-earlie-1754608992309_1754608992309.txt  Pasted-Add-the-new-zip-endpoint-in-BLOCK-1-below-after-my-existing-routes-Replace-my-INDEX-HTML-string-1754607107702_1754607107703.txt  (+8 more)
